--- a/style.css
+++ b/style.css
@@ -287,3 +287,30 @@ ul li {
     width: 100%;
     text-align: center;
 }
+
+.button-box {
+    background-color: rgb(51, 51, 51);
+    padding: 20px;
+    border-radius: 5px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.button-box h3 {
+    color: #FFFFFF;
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+.button-box a img {
+    width: 88px;
+    height: 31px;
+    margin: 5px;
+    border-radius: 3px;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.button-box a img:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 0px 10px #FFFFFF;
+}
