--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ ul li {
 }
 
 .button-box {
-    background-color: rgb(51, 51, 51);
+    background-color: rgba(0, 0, 0, 0);
     padding: 20px;
     border-radius: 5px;
     margin-top: 20px;
