--- a/style.css
+++ b/style.css
@@ -296,7 +296,8 @@ ul li {
 
 .button-box {
     background-color: rgba(43, 43, 43, 0.485);
-    padding: px;
+    padding: 1px;
+    padding-bottom: 1px;
     border-radius: 5px;
     margin-top: 20px;
     text-align: center;
