--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .intro, .social-links, .projects, .mc-server {
@@ -121,6 +122,15 @@ body {
     display: inline-block;
 }
 
+.flags {
+    width: 88px;
+    height: 31px;
+    margin: 5px;
+    border-radius: 3px;
+    display: inline-block;
+    padding-top: 5px;
+}
+
 .pin-image {
     width: 80px;
     height: auto;
@@ -146,4 +156,20 @@ body {
     padding: 10px 20px;
     width: 100%;
     text-align: center;
+}
+
+.button-box {
+    background-color: rgba(43, 43, 43, 0.485);
+    padding: 1px;
+    padding-bottom: 1px;
+    border-radius: 5px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.button-box a img {
+    width: 88px;
+    height: 31px;
+    margin: 5px;
+    border-radius: 3px;
 }
